syntax = "proto3";

option csharp_namespace = "MobileApiGetway";

package userrepo;

service UserRepo {
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  rpc GetUsers(GetUsersRequest ) returns (GetUsersReply );
  rpc AddUser(AddUserRequest ) returns (AddUserReply);
  rpc GetLastMessage(GetLastMessageRequest) returns (GetLastMessagesReply);
}

message GetLastMessageRequest{
	string guid  = 1;
}

message GetLastMessagesReply{
	string forGuid = 1;
	string msg = 2;
}

message GetUserRequest {
  string guid = 1;
}

message GetUserReply {
  string name = 1;
  string guid = 2;
}

message GetUsersRequest {
  string restriction = 1;
}

message GetUsersReply {
  repeated string names = 1;
}

message AddUserRequest {
  string guid = 1;
  string name = 2;
  string token = 3;
}

message AddUserReply {
  bool isAdded = 1;
}
